codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_copy_no_output_info_message.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4430
expression: rendered.clone()
---
• `/copy` is unavailable before the first Orbit CLI output or right after a rollback.
